--- a/app/src/main/res/layout-land/fragment_video.xml
+++ b/app/src/main/res/layout-land/fragment_video.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.george.mydeliciousoven.VideoFragment"
-    android:layout_marginTop="4dp">
+    tools:context="com.george.mydeliciousoven.VideoFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +12,10 @@
         <com.google.android.exoplayer2.ui.SimpleExoPlayerView
             android:id="@+id/exoPlayerView"
             android:layout_width="match_parent"
-            android:layout_height="200dp"></com.google.android.exoplayer2.ui.SimpleExoPlayerView>
+            android:layout_height="match_parent"
+            android:layout_margin="2dp">
+
+        </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
 
         <TextView
             android:id="@+id/videoTextView"
@@ -25,7 +27,8 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="7dp">
+            android:layout_margin="7dp"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/instructionsOfVideoTextView"
