--- a/app/src/main/res/layout-sw600dp/content_recipe_details.xml
+++ b/app/src/main/res/layout-sw600dp/content_recipe_details.xml
@@ -42,7 +42,7 @@
         android:background="@android:color/darker_gray" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <FrameLayout
             android:id="@+id/video_details_container_tablet"
