--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -4,11 +4,23 @@
     android:layout_height="match_parent"
     tools:context="com.george.mydeliciousoven.IngredientsFragment">
 
-    <TextView
-        android:id="@+id/textViewIngredient"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="4dp"
-        android:textSize="14sp" />
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/ingredientsLabel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/ingredientsLabel"/>
+
+        <TextView
+            android:id="@+id/textViewIngredient"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="4dp"
+            android:textSize="14sp" />
+    </LinearLayout>
+
 
 </FrameLayout>
