--- a/app/src/main/res/layout-sw600dp-land/fragment_video.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_video.xml
@@ -9,13 +9,23 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
-            android:id="@+id/exoPlayerView"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:layout_margin="2dp">
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/imageAboveExoplayer"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:layout_margin="2dp"
+                android:src="@drawable/no_video"/>
+            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+                android:id="@+id/exoPlayerView"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:layout_margin="2dp"></com.google.android.exoplayer2.ui.SimpleExoPlayerView>
 
-        </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/videoTextView"
