--- a/app/src/main/res/layout/oven_widget_provider.xml
+++ b/app/src/main/res/layout/oven_widget_provider.xml
@@ -13,7 +13,7 @@
         android:layout_margin="8dp"
         android:background="#09C"
         android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
+        android:text="@string/appwidget_text2"
         android:textColor="#ffffff"
         android:textSize="16sp"
         android:textStyle="bold|italic" />
