--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -2,24 +2,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/piece_of_paper"
     tools:context="com.george.mydeliciousoven.IngredientsFragment">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/ingredientsLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/ingredientsLabel"/>
+            android:padding="7dp"
+            android:text="@string/ingredientsLabel"
+            android:textSize="24sp"
+            android:textColor="#000000"/>
 
         <TextView
             android:id="@+id/textViewIngredient"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:textSize="14sp" />
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:paddingBottom="7dp"
+            android:textSize="16sp"
+            android:textStyle="italic" />
     </LinearLayout>
 
 
