--- a/app/src/main/res/layout/recipes_list_item.xml
+++ b/app/src/main/res/layout/recipes_list_item.xml
@@ -2,25 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardBackgroundImage"
         android:layout_width="match_parent"
         android:layout_height="@dimen/recipeCard"
         android:layout_margin="7dp">
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/linearBackImageMain"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/imageBackMain"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY"/>
 
             <TextView
                 android:id="@+id/recipesName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:textSize="18sp" />
-        </LinearLayout>
+                tools:text="fsfs"
+                style="@style/textMainRecipeName" />
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
