--- a/app/src/main/res/layout/steps_fragment_item.xml
+++ b/app/src/main/res/layout/steps_fragment_item.xml
@@ -7,20 +7,27 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="@dimen/stepsCard"
-        android:layout_margin="7dp">
+        android:layout_margin="4dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/imageOfSteps"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="fitXY" />
 
             <TextView
                 android:id="@+id/stepsInstructions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:textAlignment="center"
                 android:textSize="18sp" />
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
