--- a/app/src/main/res/layout-land/fragment_video.xml
+++ b/app/src/main/res/layout-land/fragment_video.xml
@@ -39,6 +39,7 @@
 
 
         <android.support.v7.widget.CardView
+            android:id="@+id/cardVideoFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="7dp"
