--- a/app/src/main/res/layout-sw600dp-port/content_recipe_details.xml
+++ b/app/src/main/res/layout-sw600dp-port/content_recipe_details.xml
@@ -13,7 +13,7 @@
 
         <FrameLayout
             android:id="@+id/ingredients_container_tablet"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerInside"/>
         <ScrollView
