--- a/app/src/main/res/layout-sw600dp-port/fragment_video.xml
+++ b/app/src/main/res/layout-sw600dp-port/fragment_video.xml
@@ -16,12 +16,12 @@
             <ImageView
                 android:id="@+id/imageAboveExoplayer"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/exoplayerHeight"
+                android:layout_height="@dimen/exoplayerHeightTablet"
                 android:src="@drawable/no_video"/>
             <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                 android:id="@+id/exoPlayerView"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/exoplayerHeight"></com.google.android.exoplayer2.ui.SimpleExoPlayerView>
+                android:layout_height="@dimen/exoplayerHeightTablet"></com.google.android.exoplayer2.ui.SimpleExoPlayerView>
 
         </RelativeLayout>
 
