--- a/app/src/main/res/layout-sw600dp/fragment_ingredients.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_ingredients.xml
@@ -9,7 +9,8 @@
         android:id="@+id/linearForIngredients"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal">
 
         <TextView
             android:id="@+id/ingredientsLabel"
@@ -18,7 +19,8 @@
             android:padding="7dp"
             android:text="@string/ingredientsLabel"
             android:textSize="22sp"
-            android:textColor="#000000"/>
+            android:textColor="#000000"
+            android:textAlignment="center"/>
 
         <TextView
             android:id="@+id/textViewIngredient"
