--- a/app/src/main/res/layout/content_recipe_details.xml
+++ b/app/src/main/res/layout/content_recipe_details.xml
@@ -1,35 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.george.mydeliciousoven.RecipeDetails"
-    tools:showIn="@layout/activity_recipe_details">
+    android:layout_marginTop="?attr/actionBarSize"
+    android:orientation="vertical">
 
     <ScrollView
         android:id="@+id/scrollOfFrameLayouts"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <FrameLayout
                 android:id="@+id/ingredients_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="centerInside">
-            </FrameLayout>
+                android:scaleType="centerInside"></FrameLayout>
+
             <FrameLayout
                 android:id="@+id/steps_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="centerInside">
-            </FrameLayout>
+                android:scaleType="centerInside"></FrameLayout>
         </LinearLayout>
 
     </ScrollView>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
