--- a/app/src/main/res/layout-sw600dp-land/fragment_video.xml
+++ b/app/src/main/res/layout-sw600dp-land/fragment_video.xml
@@ -18,11 +18,12 @@
                 android:layout_height="350dp"
                 android:layout_margin="2dp"
                 android:src="@drawable/no_video"/>
+
             <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                 android:id="@+id/exoPlayerView"
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
-                android:layout_margin="2dp"></com.google.android.exoplayer2.ui.SimpleExoPlayerView>
+                android:layout_margin="2dp" />
 
 
         </RelativeLayout>
