--- a/app/src/main/res/layout-sw600dp-port/fragment_video.xml
+++ b/app/src/main/res/layout-sw600dp-port/fragment_video.xml
@@ -17,11 +17,13 @@
                 android:id="@+id/imageAboveExoplayer"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/exoplayerHeightTablet"
-                android:src="@drawable/no_video"/>
+                android:src="@drawable/no_video"
+                android:contentDescription="TODO" />
+
             <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                 android:id="@+id/exoPlayerView"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/exoplayerHeightTablet"></com.google.android.exoplayer2.ui.SimpleExoPlayerView>
+                android:layout_height="@dimen/exoplayerHeightTablet" />
 
         </RelativeLayout>
 
