--- a/app/src/main/res/layout-sw600dp/fragment_video.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_video.xml
@@ -12,19 +12,19 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <ImageView
                 android:id="@+id/imageAboveExoplayer"
                 android:layout_width="match_parent"
-                android:layout_height="350dp"
-                android:layout_margin="2dp"
-                android:src="@drawable/no_video"/>
+                android:layout_height="@dimen/exoplayerHeightTablet"
+                android:layout_margin="4dp"
+                android:src="@drawable/no_video" />
 
             <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                 android:id="@+id/exoPlayerView"
                 android:layout_width="match_parent"
-                android:layout_height="350dp"
-                android:layout_margin="2dp" />
-
+                android:layout_height="@dimen/exoplayerHeightTablet"
+                android:layout_margin="4dp" />
 
         </RelativeLayout>
 
